Fix overflow property in intro page block CSS

--- a/blocks/intro-page/intro-page.css
+++ b/blocks/intro-page/intro-page.css
@@ -6,6 +6,7 @@
     grid-template-columns: subgrid;
     display: grid;
     padding-block: 5rem;
+    overflow: clip;
 
 
     .block-content {
